# Refteck

./: .gitignore  README.md  pyproject.toml
refteck/: api.py  hooks.py  jinja.py  migrate.py  modules.txt  spreadsheet.py
refteck/patches/: share_opportunity_to_assigned_users.py
refteck/public/js/: opportunity.js  purchase_invoice.js  purchase_order.js  purchase_receipt.js  quotation.js  request_for_quotation.js  sales_order.js  supplier_quotation.js
refteck/refteck/doctype/exw_customer_rt/: exw_customer_rt.json  exw_customer_rt.py
refteck/refteck/doctype/generated_spreadsheet_url_rt/: generated_spreadsheet_url_rt.json  generated_spreadsheet_url_rt.py
refteck/refteck/doctype/google_spreadsheet_account/: google_spreadsheet_account.js  google_spreadsheet_account.json  google_spreadsheet_account.py  test_google_spreadsheet_account.py
refteck/refteck/doctype/margin_calculation_rt/: margin_calculation_rt.json  margin_calculation_rt.py
refteck/refteck/doctype/other_charges_comparison/: other_charges_comparison.json  other_charges_comparison.py
refteck/refteck/doctype/refteck_settings/: refteck_settings.js  refteck_settings.json  refteck_settings.py  test_refteck_settings.py
refteck/refteck/doctype/refteck_settings_rt/: refteck_settings_rt.js  refteck_settings_rt.json  refteck_settings_rt.py  test_refteck_settings_rt.py
refteck/refteck/doctype/so_checklist_rt/: so_checklist_rt.json  so_checklist_rt.py
refteck/refteck/report/wip/: wip.js  wip.json  (+1 more)
refteck/templates/: connected_sq_details.html  previous_quotation_table.html  statement_of_account_email.html
(+52 files in other folders)
