[project]
name = "refteck"
authors = [
    { name = "GreyCube Technologies", email = "admin@greycube.in"}
]
description = "Customization for Refteck"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "gspread~=6.2.1",
    "gspread-formatting~=1.2.1"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
